@@ -115,10 +115,24 @@ class CSSValueTestCase(basetest.BaseTestCase):
             u'red /**/': u'red /**/',
             u'/**/ red /**/': u'/**/red /**/', # S is lost
             # values 
+            u'.0': u'0',
             u'0': u'0',
+            u'0.0': u'0',
             u'00': u'0',
             u'0%': u'0',
             u'0px': u'0',
+            u'-.0': u'0',
+            u'-0': u'0',
+            u'-0.0': u'0',
+            u'-00': u'0',
+            u'-0%': u'0',
+            u'-0px': u'0',
+            u'+.0': u'0',
+            u'+0': u'0',
+            u'+0.0': u'0',
+            u'+00': u'0',
+            u'+0%': u'0',
+            u'+0px': u'0',
             u'1': u'1',
             u'1px': u'1px',
             u'1%': u'1%',
